fixed scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,11 +65,9 @@ p {
   background: white;
   display: flex;
   flex-direction: column;
-  padding: 20px 30px;
+  padding: 20px 0px;
   align-items: center;
-  text-align: center;
   width: 100%;
-  color: var(--main-color);
   font-weight: bold;
 }
 
